# COC-autoskip

./: .gitignore  Cargo.toml  Dockerfile  Jenkinsfile  Makefile  README.md
src/: adb.rs  main.rs  ocr.rs  sound.rs  utils.rs
