[package]
name = "coc-autoskip"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.5"
leptess = "0.14.0"
rand = "0.8.5"
rodio = "0.17.1"
notify-rust = "4.8.0"
colored = "2.0.0"

[dev-dependencies]
test-case = "3.0.0"
